// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShodanTimelineBlock> renders as expected 1`] = `
<div
  className="shodan-map__item "
  data-tooltip="Kiri"
  onClick={[Function]}
  onKeyPress={null}
  role="link"
  style={
    Object {
      "height": "71.42857142857143%",
      "left": "8%",
      "width": "33.33333333333333%",
    }
  }
  tabIndex={0}
/>
`;

exports[`<ShodanTimelineBlock> renders as expected with url 1`] = `
<div
  className="shodan-map__item pointer"
  data-tooltip="Kiri"
  onClick={[Function]}
  onKeyPress={null}
  role="link"
  style={
    Object {
      "height": "71.42857142857143%",
      "left": "8%",
      "width": "33.33333333333333%",
    }
  }
  tabIndex={0}
/>
`;
